--- a/app/templates/_confirm_order.hbs
+++ b/app/templates/_confirm_order.hbs
@@ -2,7 +2,7 @@
   <div class = "organisation-detail small-12 columns">
     <div class="detail">
       <div class="row">
-        <div class="name small-4 columns">Transport method:</div>
+        <div class="name small-4 columns"> {{t "order.transport_details.transport_method"}}:</div>
         <div class="small-8 columns">
           {{#if order.orderTransport.isGGV}}
             {{t "order.hired_van"}}
