--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -14,12 +14,13 @@
   }
 
   .organisation-detail {
-    margin: 1rem 0 0 0.4rem;
+    margin: 1rem 0 0 0.4rem
     padding: 2rem 1.5rem 2rem 2rem;
     background-color: #1A3964;
     font-size: 0.9rem;
     width: 95%!important;
     @media #{$small-only} {
+      margin-left: 0.4rem !important;
       font-size: 0.8rem;
       padding: 1.5rem 0.5rem 1.5rem 1.5rem;
       width: 93.5%!important;
