--- a/app/styles/templates/_login.scss
+++ b/app/styles/templates/_login.scss
@@ -14,7 +14,7 @@
   }
 
   .organisation-detail {
-    margin: 1rem 0 0 0.4rem
+    margin: 1rem 0 0 0.4rem;
     padding: 2rem 1.5rem 2rem 2rem;
     background-color: #1A3964;
     font-size: 0.9rem;
