Squeezing main page on opening side bar fixed

--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -125,7 +125,7 @@
   }
 }
 .inner-wrap {
-  width: auto;
+  width: 100%;
 }
 .off-canvas-wrap {
   @media only screen and (min-width: 71.063em) and (max-width: 120em){
