--- a/app/styles/_custom_button.scss
+++ b/app/styles/_custom_button.scss
@@ -11,4 +11,24 @@
       }
     }
   }
+
+  &.action:not(.disabled) {
+    background-color: #E25956
+  }
+
+  &.disabled {
+    background-color: gray;
+    pointer-events: none;
+    border-color: gray;
+  }
+
+  &.scroll-down {
+    background-color: #E25956;
+    border-radius: 50%;
+    height: 2.5rem;
+    width: 2.5rem;
+    line-height: 2.5rem;
+    text-align: center;
+    padding: 0;
+  }
 }
