GCW-2131 Add translations for jockey club banner

--- a/app/templates/components/logo-banner.hbs
+++ b/app/templates/components/logo-banner.hbs
@@ -1,8 +1,8 @@
 <div class="goodcity-logo-banner {{ device }}">
     <div class="content">
         <div class="contributors labels">
-            <div class="contributor crossroads">Presented by</div>
-            <div class="contributor jockey_club">Funded by</div>
+            <div class="contributor crossroads"> {{ t "browse.presented_by" }} </div>
+            <div class="contributor jockey_club"> {{ t "browse.funded_by" }} </div>
         </div>
         <div class="contributors logos">
             <div class="contributor logo crossroads"></div>
