--- a/app/styles/components/_logo-banner.scss
+++ b/app/styles/components/_logo-banner.scss
@@ -1,7 +1,6 @@
 .goodcity-logo-banner {
 
     width: 100%;
-    height: 8rem;
     display: none;
 
    @media #{$medium-up} {
@@ -39,14 +38,16 @@
             justify-content: space-around;
 
             &.labels {
-                height: 15%;
+                height: 1rem;
                 padding-top: 0.5rem;
                 font-size: 0.7rem;
                 color: #e0e5ebdb;
             }
 
             &.logos {
-                height: 85%;
+                height: 5rem;
+                margin-top: 0.5rem;
+                margin-bottom: 0.5rem;
             }
 
             .contributor {
