--- a/app/templates/components/language-switcher.hbs
+++ b/app/templates/components/language-switcher.hbs
@@ -1,2 +1,5 @@
-<a href="" {{action "setLanguage" 'zh-tw'}} class="menu-4 {{if isChinese 'selected'}}">{{t "language.zh"}}</a>
-<a href="" {{action "setLanguage" 'en'}} class="menu-4 right {{if isEnglish 'selected'}}">{{t "language.en"}}</a>
+{{#if isEnglish}}
+    <a href="" {{action "setLanguage" 'zh-tw'}} class="selected">{{t "language.zh"}}</a>
+{{else}}
+    <a href="" {{action "setLanguage" 'en'}} class="selected">{{t "language.en"}}</a>
+{{/if}}
