--- a/app/styles/_sidebar.scss
+++ b/app/styles/_sidebar.scss
@@ -1,3 +1,5 @@
+$sidebar-width: 7.8rem;
+
 .left-small{
   border-right:none;
 }
@@ -59,6 +61,10 @@
         font-size: 1.7rem;
       }
       &.menu-3 {
+        background-color: $light-blue;
+        font-size: 2rem;
+      }
+      &.menu-4 {
         background-color: $smokey-blue;
         font-size: 2rem;
       }
@@ -66,54 +72,25 @@
         background-color: $smokey-grey;
         font-size: 2rem;
       }
-      &.menu-4 {
-        background-color: $white;
-        padding: 0 0.3rem !important;
-      }
     }
 
-    li.language {
-      padding-top: 1rem;
-      font-size: 0.6rem;
-      @media #{$small-only} {
+    li.links {
+      bottom: 0;
+      position: absolute;
+      padding-bottom: 2rem;
+      font-size: 0.6rem;  
+      text-align: center;
+      width: 100%;;
 
-      }
-      a {
-        text-decoration: underline;
-        color: #a3aab6;
-        display: inline;
-        font-size: 0.6rem;
-        padding: 0;
-        padding-left: 0.2rem;
-        padding-right: 0.6rem !important;
-        @media #{$small-only} {
-          font-size: 0.6rem !important;
-        }
-      }
-    }
-
-    li.cr-logo {
-      width: 5.7rem;
-      height: 34%;
-      a {
-        position: absolute;
-        bottom: 1.8rem;
-        padding: 0px;
-        label {
-          color: $light-gray-2;
-          text-transform: none;
-          font-size: 0.6rem;
-          span{
-            text-decoration: underline;
-          }
-        }
-        img{
-          width: 4.3rem;
-        }
-        @media #{$small-only} {
-          width: 4.8rem;
-          img{
-            width: 2.8rem;
+      .line {
+        margin-bottom: 0.8rem;
+        a {
+          text-decoration: underline;
+          text-transform: capitalize;
+          color: #a3aab6;
+          display: inline;
+          @media #{$small-only} {
+            font-size: 0.6rem !important;
           }
         }
       }
@@ -176,7 +153,7 @@
 }
 .move-right {
   .left-off-canvas-menu {
-    width: 5.8rem;
+    width: $sidebar-width;
     box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
   }
   > .inner-wrap {
@@ -186,7 +163,7 @@
     -ms-transform: none;
     -o-transform: none;
     transform: none;
-    margin-left: 5.8rem;
+    margin-left: $sidebar-width;
   }
   .exit-off-canvas {
     background: rgba(0, 35, 89, 0.2);
@@ -197,7 +174,7 @@
 
 .move-left {
   .right-off-canvas-menu {
-    width: 5.8rem;
+    width: $sidebar-width;
     box-shadow: -4px 0 4px rgba(0, 0, 0, 0.5), 4px 0 4px rgba(0, 0, 0, 0.5);
   }
   > .inner-wrap {
