--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -2,7 +2,17 @@
   <div class="small-12 medium-9 large-6 columns">
     <section class="main-section login-page">
 
-      {{partial "navigation_list"}}
+      <nav class="tab-bar">
+        <section class="left-small">
+          {{#link-to backLinkPath classNames="back"}}{{t "back"}}{{/link-to}}
+        </section>
+
+        <section class="middle tab-bar-section">
+          <h1 class="title">{{t "order.login"}}/{{t "order.register"}}</h1>
+        </section>
+      </nav>
+
+      {{small-cart-toggle-view}}
 
       {{#validatable-form onSubmit=(action 'resendPin') as |form|}}
         <div class="row">
@@ -12,20 +22,24 @@
                 <div class="small-12 columns">
                  <label class="form-label">{{t "login.hk_only"}}</label>
                 </div>
-              </div>
-
-              <div class="row collapse">
-                <div class="small-10 medium-8 columns">
-                  {{#form-control}}
-                    <span class="prefix">+852</span>
-                    {{numeric-input value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
-                  {{/form-control}}
+                <div class="small-12 columns">
+                 <label class="form-label">{{t "login.sms_pincode"}}</label>
                 </div>
               </div>
 
               <div class="row collapse">
-                <div class="small-10 medium-8 columns">
-                  <button id="getsmscode" class="button expand" {{action 'submit' target=form}}>{{t "login.smscode"}}</button>
+                <div class="small-12 medium-8 columns">
+                  {{!-- {{#form-control}} --}}
+                    <span class="prefix">+852</span>
+                    {{numeric-input classNames="number_input" value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
+                    <div class="warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;Please provide a valid Hong Kong mobile number</div>
+                  {{!-- {{/form-control}} --}}
+                </div>
+              </div>
+
+              <div class="row collapse">
+                <div class="small-12 medium-8 columns">
+                  <button id="getsmscode" class="button expand expand_button" {{action 'submit' target=form}}>{{t "login.smscode"}}</button>
                 </div>
               </div>
             </div>
