--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -27,6 +27,9 @@
                 <div class="small-12 columns">
                   <label class="form-label">{{t "login.sms_pincode"}}</label>
                 </div>
+                <div class="small-12 columns">
+                 <label class="form-label">{{t "login.sms_pincode"}}</label>
+                </div>
               </div>
 
               <div class="row">
