Account details and Organisation Page UI added

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -17,6 +17,8 @@
 @import "transport_details";
 @import "my_orders";
 @import "foundation_large";
+@import "search";
+@import "account_details";
 
 @import "templates/home";
 @import "templates/loading";
