--- a/app/templates/authenticate.hbs
+++ b/app/templates/authenticate.hbs
@@ -1,7 +1,7 @@
 <div class="row checkout_pages">
   {{#message-box-click-button btn1Click=true}}
     <div class="small-12 medium-9 large-6 columns">
-      <section class="main-section login-page">
+      <section class="main-section new-user-section ui login_page">
 
         <nav class="tab-bar">
           <section class="middle tab-bar-section">
@@ -22,9 +22,9 @@
 
             <div class="row">
               <div class="small-8 columns">
-                {{!-- {{#form-control}} --}}
+                {{#form-control}}
                   {{numeric-input classNames="number_input center_align_placeholder" value=pin name="pin" id="pin" maxlength="4" placeholder="XXXX" required='true' pattern=".{4,}" autoFocus=true}}
-                {{!-- {{/form-control}} --}}
+                {{/form-control}}
               </div>
               <div class="small-4 columns">
                 <button id="submit_pin" {{action 'submit' target=form}} class="button expand">{{t "ok"}}</button>
