--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -42,6 +42,9 @@
                   <button id="getsmscode" class="button expand expand_button" {{action 'submit' target=form}}>{{t "login.smscode"}}</button>
                 </div>
               </div>
+              <div class="small-12 columns">
+                <label class="form-label">{{t "login.privacy"}}</label>
+              </div>
             </div>
           </div>
         </div>
