--- a/app/templates/search_organisation.hbs
+++ b/app/templates/search_organisation.hbs
@@ -2,13 +2,17 @@
   <div class="small-2 medium-2 columns ">
     <div class="done" {{action "selectOrganisation" }}>{{t "account.done"}}</div>
   </div>
-  <div class="small-1 medium-1"></div>
-  <div class="small-9 medium-9 columns">
+  <div class="small-2 medium-2"></div>
+  <div class="small-8 medium-8 columns">
     {{input
       name="searchText"
       id="searchText"
       value=searchText
       disabled=false}}
+
+    {{#if hasSearchText}}
+      <i class="fa fa-times-circle" {{action "clearSearch"}}></i>
+    {{/if}}
   </div>
   <div class="row">
     <div class="small-12 medium-12 columns">
@@ -17,48 +21,43 @@
   </div>
 </div>
 
-<div class="row">
+<section class="main-section organisation_search_result">
   <div class="row search">
     <div class="small-12 columns">
-      {{!--<ul class="list list-activity">
-         {{#each filteredResults as |organisation|}}
-          <li>
-          {{#link-to 'organisations.detail' organisation.id tagName='div' href=false}}
-            <div class="row">
-              <div class="small-12 columns">
-                {{organisation.nameEn}}
-              </div>
-            </div>
-             <div class="row">
-              {{organisation.ordersCount}} {{t 'orders'}}
-              {{organisation.usersCount}} <i class="fa fa-users"></i>
-            </div>
-          {{/link-to}}
-          </li>
-        {{/each}}
-      </ul> --}}
-      <ul class="list list-activity">
-          <li>
-            <div class="row">
-              <div class="small-12 columns headline">
-                Jockey Club
-              </div>
-            </div>
-            <div class="row headline">
-              Something in chinese
-            </div>
-          </li>
-          <li>
-            <div class="row">
-              <div class="small-12 columns">
-                Jockey Club
-              </div>
-            </div>
-             <div class="row">
-              something in chinese
-            </div>
-          </li>
-      </ul>
+      {{#if isLoading}}
+        <div class="loading_screen">
+          {{partial 'loading'}}
+        </div>
+      {{else}}
+        {{#if filteredResults}}
+          <ul class="list list-activity">
+            {{#each filteredResults as |organisation|}}
+              <li>
+              {{#link-to 'organisations.detail' organisation.id tagName='div' href=false}}
+                <div class="row">
+                  <div class="small-12 columns">
+                    {{organisation.nameEn}}
+                  </div>
+                </div>
+                 <div class="row">
+                  {{organisation.ordersCount}} {{t 'orders'}}
+                  {{organisation.usersCount}} <i class="fa fa-users"></i>
+                </div>
+              {{/link-to}}
+              </li>
+            {{/each}}
+          </ul>
+
+          {{#infinity-loader}}
+          {{/infinity-loader}}
+
+        {{else if hasNoResults}}
+          <div class='no_result'>{{t "no_search_results"}}</div>
+        {{/if}}
+      {{/if}}
     </div>
+
   </div>
-</div>
+  {{!-- {{partial "sticky_footer"}} --}}
+</section>
+
