--- a/app/styles/templates/_home.scss
+++ b/app/styles/templates/_home.scss
@@ -1,106 +1,107 @@
 .home_page {
-
-    .scroller {
-        height: 93vh;
-        overflow-y: auto;
-        padding-bottom: 8rem;
-
-        @media #{$medium-up} {
-            /**
+  
+  .scroller {
+    height: 93vh;
+    overflow-y: auto;
+    padding-bottom: 8rem;
+  
+    @media #{$medium-up} {
+      /**
             * On desktop, show items side by side
             * instead of on top of each otherds
             */
-            .responsive_container {
-                display: flex;
+      .responsive_container {
+        display: flex;
 
-                >div {
-                    position: relative;
-                    float: left;
-                    width: 100%;
-                }
-            }
+        > div {
+          position: relative;
+          float: left;
+          width: 100%;
         }
-
-        .home_section {
-            position: relative;
-            color: white;
-            text-align: center;
-            padding: 0.9rem;
-
-            &:not(:last-child) {
-                border-bottom: 1px solid #334f75;
-            }
-
-            // Content
-
-            .section_title {
-                font-family: $header-font-family;
-                font-weight: bold;
-            }
-
-            .section_subtitle {
-                margin-top: 1rem;
-            }
-
-            .section_text {
-                text-align: left;
-                padding-left: 0.5rem;
-                padding-right: 0.5rem;
-                margin-bottom: 1rem;
-                margin-top: 1rem;
-
-                .step {
-                    @extend .small;
-                    @extend .light;
-
-                    margin-top: 1rem;
-
-                    .bullet {
-                        padding-left: 1rem;
-                    }
-
-                    &.transport_option {
-                        margin-top: 0;
-                        text-indent: -1em;
-                        padding: 1rem 1em 0.1em 1em;
-                    }
-                }
-            }
-
-            // Helpers
-
-            .button {
-
-                &.action {
-                    width: 60%;
-                    white-space: nowrap;
-                    padding-left: 0px;
-                    padding-right: 0px;
-                    text-transform: uppercase;
-                    margin-top: 1rem;
-                    .fa {
-                        margin-left: 10px;
-                    }
-                }
-
-                &.scroll-down {
-                    position: absolute;
-                    top: 1rem;
-                    right: 1rem;    
-                }
-            }
-
-            &.small, .small {
-                font-size: 0.7rem;
-            }
-        
-            &.light, .light {
-                color: #e0e5ebdb;
-            }
-
-            a {
-                text-decoration: underline;
-            }
-        }
+      }
     }
+
+    .home_section {
+      position: relative;
+      color: white;
+      text-align: center;
+      padding: 0.9rem;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid #334f75;
+      }
+
+      // Content
+
+      .section_title {
+        font-family: $header-font-family;
+        font-weight: bold;
+      }
+
+      .section_subtitle {
+        margin-top: 1rem;
+      }
+
+      .section_text {
+        text-align: left;
+        padding-left: 0.5rem;
+        padding-right: 0.5rem;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+
+        .step {
+          @extend .small;
+          @extend .light;
+
+          margin-top: 1rem;
+
+          .bullet {
+            padding-left: 1rem;
+          }
+
+          &.transport_option {
+            margin-top: 0;
+            text-indent: -1em;
+            padding: 1rem 1em 0.1em 1em;
+          }
+        }
+      }
+
+      // Helpers
+
+      .button {
+        &.action {
+          width: 60%;
+          white-space: nowrap;
+          padding-left: 0px;
+          padding-right: 0px;
+          text-transform: uppercase;
+          margin-top: 1rem;
+          .fa {
+            margin-left: 10px;
+          }
+        }
+
+        &.scroll-down {
+          position: absolute;
+          top: 1rem;
+          right: 1rem;
+        }
+      }
+
+      &.small,
+      .small {
+        font-size: 0.7rem;
+      }
+
+      &.light,
+      .light {
+        color: #e0e5ebdb;
+      }
+
+      a {
+        text-decoration: underline;
+      }
+    }
+  }
 }
