Incomplete User redirected to Account Details page | Search organisation working functionality added

--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -88,6 +88,11 @@
       padding: 0.2rem 0;
     }
   }
+  .org_search{
+    color: #E2E6EB;
+    margin-left: -2%;
+    padding-bottom: 1rem;
+  }
 }
 
 .fixed_search_header {
