--- a/app/templates/account_details.hbs
+++ b/app/templates/account_details.hbs
@@ -1,5 +1,5 @@
 <div class="row checkout_pages">
-  <div class="small-12 medium-9 large-6 columns">
+  <div class="small-12 medium-9 large-9 columns">
     <section class="main-section new-user-section ui login_page">
       <nav class="tab-bar">
         <section class="left-small">
@@ -31,10 +31,19 @@
               <div class="row">
                 <div class="small-12 columns">
                     <label class="form-label">{{t "account.organisation"}}</label>
-                    {{#form-control}}
-                      {{input type="text" classNames="number_input center_align_placeholder" required='true' value=model.organisation.nameEn}}
-                      <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.organisation_warning"}}</div>
-                    {{/form-control}}
+                    {{#link-to "search_organisation"}}
+                      {{#if model.organisation}}
+                        {{#form-control}}
+                          {{input type="text" classNames="number_input center_align_placeholder" required='true' value=model.organisation.nameEn}}
+                          <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.organisation_warning"}}</div>
+                        {{/form-control}}
+                      {{else}}
+                        {{#form-control}}
+                          {{input type="text" classNames="number_input center_align_placeholder" required='true' }}
+                          <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.organisation_warning"}}</div>
+                        {{/form-control}}
+                      {{/if}}
+                    {{/link-to}}
                 </div>
               </div>
               <br>
@@ -42,7 +51,7 @@
                 <div class="small-2 columns">
                     <label class="form-label">{{t "account.title"}}</label>
                     {{#form-control}}
-                      {{input type="text" classNames="number_input center_align_placeholder" required='true'}}
+                      {{input type="text" value=model.user.title classNames="number_input center_align_placeholder" required='true'}}
                       <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.title_warning"}}</div>
                     {{/form-control}}
                 </div>
@@ -65,10 +74,17 @@
               <div class="row">
                 <div class="small-12 columns">
                     <label class="form-label">{{t "account.position"}}</label>
-                    {{#form-control}}
-                      {{input type="text" value=model.organisationsUser.position classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
+                    {{#if model.organisationsUser}}
+                      {{#form-control}}
+                        {{input type="text" value=model.organisationsUser.position classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
+                        <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.position_warning"}}</div>
+                      {{/form-control}}
+                    {{else}}
+                      {{#form-control}}
+                      {{input type="text" classNames="number_input center_align_placeholder" required='true' autoFocus=true}}
                       <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "account.position_warning"}}</div>
                     {{/form-control}}
+                    {{/if}}
                 </div>
               </div>
               <br>
