Hide Browse heading for account_details page

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -7,7 +7,9 @@
       <div class="large-12 medium-12 columns collapse no-padding" id="content">
         <div class="off-canvas-wrap move-right {{if hasCartItems 'move-left' ''}}" data-offcanvas>
           <div class="inner-wrap">
-            {{partial "sidebar"}}
+            {{#if showSidebar}}
+              {{partial "sidebar"}}
+            {{/if}}
             <div class="show-for-small">
               <a class="exit-off-canvas"></a>
             </div>
