--- a/app/styles/_search.scss
+++ b/app/styles/_search.scss
@@ -4,6 +4,14 @@
   background-color: $light-grey;
   z-index: 1000;
 
+
+  @media #{$small-only} {
+    font-size: 1.2rem;
+    padding: 0.5rem 0.5rem;
+    top: 0.41rem;
+    width: 100% !important;
+  }
+
   input {
     padding-left: 0.5rem;
     width: 97.5%;
@@ -106,15 +114,18 @@
 }
 
 .done{
-    padding-left: 1rem;
-    padding-top: 1rem;
-    color: #979797;
-    cursor: pointer;
+  padding-top: 1rem;
+  color: #979797;
+  cursor: pointer;
+  font-size: 1rem;
+  padding-left: 2rem;
+  font-weight: 100;
 }
 
 .contact_us{
   color: #A5A5A5;
-  padding: .7rem 1rem 1rem 1.2rem;
+  padding: .7rem 1rem 1rem 1.8rem;
+  font-size: .7rem !important;
 }
 
 .headline{
