--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -6,9 +6,13 @@
     padding: 0.2rem;
     display: none;
     padding-bottom: 0.25rem !important;
+    width: 98.7%;
 
     @media #{$small-only} {
       font-size: 0.65rem;
+      margin-left: .3rem !important;
+      width: 97%;
+      float: left !important;
     }
   }
 
