--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -1,5 +1,9 @@
 .new-user-section {
 
+  .user_title select{
+    width: 100%;
+  }
+
   .input-error {
     background: #ED4C4E;
     color: white;
