--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -27,14 +27,16 @@
                 </div>
               </div>
 
-              <div class="row collapse">
-                <div class="small-12 medium-8 columns">
-                  {{#form-control}}
-                    <span class="prefix">+852</span>
-                    {{numeric-input classNames="number_input" value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
-                    <div class="input-error warning_empty">{{fa-icon "warning"}}&nbsp;&nbsp;{{t "login.mobile_warning"}}</div>
-                  {{/form-control}}
-                </div>
+              <div class="row">
+                {{#form-control}}
+                  <div class="small-12 medium-8 columns">
+                      <span class="prefix">+852</span>
+                      {{numeric-input classNames="number_input" value=mobilePhone name="mobilePhone" id="mobile" maxlength="8" required=true pattern=".{8,}" autoFocus=true}}
+                  </div>
+                  <div class="small-12 columns input-error warning_empty">
+                    {{fa-icon "warning"}}&nbsp;&nbsp;{{t "login.mobile_warning"}}
+                  </div>
+                {{/form-control}}
               </div>
 
               <div class="row collapse">
