--- a/app/styles/account_details.scss
+++ b/app/styles/account_details.scss
@@ -3,6 +3,10 @@
     width: 100%;
   }
 
+  .user_title select{
+    width: 100%;
+  }
+
   .input-error {
     background: #ED4C4E;
     color: white;
