--- a/app/templates/components/logo-banner.hbs
+++ b/app/templates/components/logo-banner.hbs
@@ -5,8 +5,8 @@
             <div class="contributor jockey_club"> {{ t "banner.funded_by" }} </div>
         </div>
         <div class="contributors logos">
-            <div class="contributor logo crossroads"></div>
-            <div class="contributor logo jockey_club"></div>
+            <div class="contributor logo crossroads {{if isCordova "cordova" }}"></div>
+            <div class="contributor logo jockey_club {{if isCordova "cordova" }}"></div>
         </div>
     </div>
 </div>
